uzycie contextu dla course modules

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
     -->
     <title>React App</title>
     <style>
-      /* body {
+      body {
         overflow: hidden;
-      } */
+      }
     </style>
   </head>
   <body>
